Fix label overflow problem, resolves #779

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -527,6 +527,10 @@
       clear: both;
     }
 
+    [contenteditable]{
+      height:auto;
+    }
+
     input[type='text'],
     input[type='number'],
     input[type='date'],
